# JKUAT

./: admin.h  grading.c  grading.h  grading_system  grading_system2  main.c  main.text.file.c  output.txt  student.c  student.h
GroupN_4_work/: DOCUMENTATION.docx  DOCUMENTATION.md  README.md  admin.cpp  admin.h  customer.cpp  main.cpp  order.h  product.h  user.h
GroupN_4_work/shopease/: CMakeLists.txt  README.md  shopease
GroupN_4_work/shopease/src/: main.cpp  order.cpp  product.cpp  user.cpp
GroupN_4_work/shopease/src/include/: customer.h
assignment 01/: quiz1.cpp  quiz2.cpp  quiz3.cpp
banking system/: account.cpp  account.h  main.cpp
employee/: Readme.md  accounts.txt  employees.txt  payment.cpp
grading_student/: admin.c  grading.c  main.text.file.c  output.txt
inventory management system/: Readme.md  first  inventory.cpp  inventory.h  main.cpp  product.cpp  product.h
library sytem/: accounts.txt  book.cpp  books.txt
my banking system/: main.cpp  users.txt
student management/: log.txt  main.cpp  students.txt  users.txt
student management system/: README.md  main.cpp  student.cpp  student.h
students/: README.md  grading_system  output.txt
